[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/Interface/Menus/Settings/Settings.gd" type="Script" id=1]

[node name="Settings" type="CanvasLayer"]
layer = 2
script = ExtResource( 1 )

[node name="Settings" type="Control" parent="."]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -214.0
margin_top = -120.0
margin_right = 214.0
margin_bottom = 120.0
__meta__ = {
"_edit_lock_": true
}

[node name="Background" type="ColorRect" parent="Settings"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -90.0
margin_right = 160.0
margin_bottom = 90.0
color = Color( 0.0627451, 0.0784314, 0.121569, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="MarginContainer" type="MarginContainer" parent="Settings/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="Settings/Background/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 304.0
margin_bottom = 164.0
custom_constants/separation = 16

[node name="HBoxContainer" type="HBoxContainer" parent="Settings/Background/MarginContainer/VBoxContainer"]
margin_right = 288.0
margin_bottom = 24.0
alignment = 1

[node name="FullscreenCheckbox" type="CheckBox" parent="Settings/Background/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 54.0
margin_right = 162.0
margin_bottom = 24.0
text = "Fullscreen"

[node name="VsyncCheckbox" type="CheckBox" parent="Settings/Background/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 166.0
margin_right = 234.0
margin_bottom = 24.0
text = "Vsync"

[node name="MasterVolumeContainer" type="HBoxContainer" parent="Settings/Background/MarginContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 288.0
margin_bottom = 48.0
size_flags_vertical = 0

[node name="Label" type="Label" parent="Settings/Background/MarginContainer/VBoxContainer/MasterVolumeContainer"]
margin_right = 140.0
margin_bottom = 8.0
size_flags_horizontal = 3
text = "Master Volume"

[node name="HBoxContainer" type="HBoxContainer" parent="Settings/Background/MarginContainer/VBoxContainer/MasterVolumeContainer"]
margin_left = 144.0
margin_right = 288.0
margin_bottom = 8.0

[node name="MasterSlider" type="HSlider" parent="Settings/Background/MarginContainer/VBoxContainer/MasterVolumeContainer/HBoxContainer"]
margin_right = 100.0
margin_bottom = 8.0
rect_min_size = Vector2( 100, 8 )
size_flags_vertical = 6
value = 50.0

[node name="MasterValue" type="Label" parent="Settings/Background/MarginContainer/VBoxContainer/MasterVolumeContainer/HBoxContainer"]
margin_left = 104.0
margin_right = 144.0
margin_bottom = 8.0
rect_min_size = Vector2( 40, 0 )
text = "50%"
align = 2

[node name="MusicVolumeContainer" type="HBoxContainer" parent="Settings/Background/MarginContainer/VBoxContainer"]
margin_top = 64.0
margin_right = 288.0
margin_bottom = 72.0
size_flags_vertical = 0

[node name="Label" type="Label" parent="Settings/Background/MarginContainer/VBoxContainer/MusicVolumeContainer"]
margin_right = 140.0
margin_bottom = 8.0
size_flags_horizontal = 3
text = "Music Volume"

[node name="HBoxContainer" type="HBoxContainer" parent="Settings/Background/MarginContainer/VBoxContainer/MusicVolumeContainer"]
margin_left = 144.0
margin_right = 288.0
margin_bottom = 8.0

[node name="MusicSlider" type="HSlider" parent="Settings/Background/MarginContainer/VBoxContainer/MusicVolumeContainer/HBoxContainer"]
margin_right = 100.0
margin_bottom = 8.0
rect_min_size = Vector2( 100, 8 )
size_flags_vertical = 4
value = 50.0

[node name="MusicValue" type="Label" parent="Settings/Background/MarginContainer/VBoxContainer/MusicVolumeContainer/HBoxContainer"]
margin_left = 104.0
margin_right = 144.0
margin_bottom = 8.0
rect_min_size = Vector2( 40, 0 )
text = "50%"
align = 2

[node name="EffectsVolumeContainer" type="HBoxContainer" parent="Settings/Background/MarginContainer/VBoxContainer"]
margin_top = 88.0
margin_right = 288.0
margin_bottom = 96.0
size_flags_vertical = 0

[node name="Label" type="Label" parent="Settings/Background/MarginContainer/VBoxContainer/EffectsVolumeContainer"]
margin_right = 140.0
margin_bottom = 8.0
size_flags_horizontal = 3
text = "Effects Volume"

[node name="HBoxContainer" type="HBoxContainer" parent="Settings/Background/MarginContainer/VBoxContainer/EffectsVolumeContainer"]
margin_left = 144.0
margin_right = 288.0
margin_bottom = 8.0

[node name="EffectsSlider" type="HSlider" parent="Settings/Background/MarginContainer/VBoxContainer/EffectsVolumeContainer/HBoxContainer"]
margin_right = 100.0
margin_bottom = 8.0
rect_min_size = Vector2( 100, 8 )
size_flags_vertical = 6
value = 50.0

[node name="EffectsValue" type="Label" parent="Settings/Background/MarginContainer/VBoxContainer/EffectsVolumeContainer/HBoxContainer"]
margin_left = 104.0
margin_right = 144.0
margin_bottom = 8.0
rect_min_size = Vector2( 40, 0 )
text = "50%"
align = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Settings/Background/MarginContainer/VBoxContainer"]
margin_top = 116.0
margin_right = 288.0
margin_bottom = 148.0
size_flags_vertical = 10

[node name="CloseButton" type="Button" parent="Settings/Background/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 142.0
margin_bottom = 32.0
rect_min_size = Vector2( 64, 32 )
size_flags_horizontal = 3
text = "Close"

[node name="RestartSceneButton" type="Button" parent="Settings/Background/MarginContainer/VBoxContainer/HBoxContainer2"]
visible = false
margin_left = 92.0
margin_right = 196.0
margin_bottom = 32.0
rect_min_size = Vector2( 64, 32 )
size_flags_horizontal = 3
text = "Restart Scene"

[node name="ExitButton" type="Button" parent="Settings/Background/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 146.0
margin_right = 288.0
margin_bottom = 32.0
rect_min_size = Vector2( 64, 32 )
size_flags_horizontal = 3
size_flags_vertical = 10
text = "Exit Game"
